# command-schema

./: .gitignore  7z.json  7za.json  7zr.json  CHANGELOG.md  Cargo.toml  FileCheck-18__FileCheck.json  GET__lwp-request.json  HEAD__lwp-request.json  LICENSE  Makefile  POST__lwp-request.json  README.md  aa-enabled.json  aa-exec.json  aa-features-abi.json  aa-load.json  aa-remove-unknown.json  aa-status.json  aa-teardown.json  accessdb.json  aclocal-1.16.json  aclocal__aclocal-1.16.json  activate-global-python-argcomplete.json  add-apt-repository.json  add-shell.json  addgroup__adduser.json  addpart.json  addr2line__x86_64-linux-gnu-addr2line.json  adduser.json  age-keygen.json  age.json  agetty.json  ansible-community.json  ansible-config.json  ansible-connection.json  ansible-console.json  ansible-doc.json  ansible-galaxy.json  ansible-inventory.json  (+1412 more)
.github/workflows/: extract-schemas.yml
cli/: Cargo.toml  README.md
cli/src/: main.rs
cli/tests/: cli_integration.rs  integration_tests.rs
core/: Cargo.toml  README.md
core/src/: lib.rs  merge.rs  package.rs  types.rs  validate.rs
db/: Cargo.toml  README.md  build.rs
db/examples/: bundled_schemas.rs  load_static_db.rs
db/src/: bundled.rs  config.rs  error.rs  lib.rs  loader.rs  manifest.rs
db/tests/: integration_tests.rs
discovery/: Cargo.toml  README.md
discovery/examples/: parse_help.rs
discovery/src/: cache.rs  discover.rs  extractor.rs  lib.rs  output.rs  report.rs  version.rs
discovery/src/parser/: ast.rs  classify.rs  confidence.rs  constraints.rs  diagnostics.rs  merge.rs  mod.rs  normalize.rs  util.rs
discovery/src/parser/strategies/: gnu.rs  mod.rs  npm.rs  section.rs  usage.rs
discovery/src/parser/strategies/man/: detect.rs  mod.rs
discovery/src/parser/strategies/man/rendered/: commands.rs  mod.rs  normalize.rs  options.rs  sections.rs  synopsis.rs
discovery/src/parser/strategies/man/roff/: escapes.rs  lexer.rs  man.rs  mdoc.rs  mod.rs
discovery/tests/: fixtures_parser.rs
discovery/tests/fixtures/: git-rebase-man-rendered.txt  git-rebase-man-source.txt  man-description-options-rendered.txt  man-lowercase-rendered.txt  man-lowercase-source.txt
discovery/wrappers/node/command-schema-discovery/src/: types.ts
discovery/wrappers/python/command_schema_discovery/: types.py
docs/: integration-guide.md
examples/: Cargo.toml  bundled_schemas.rs  load_static_db.rs  parse_help.rs  sqlite_migration.rs  wrashpty_integration.rs
examples/src/: lib.rs
sqlite/: Cargo.toml  README.md
sqlite/examples/: sqlite_migration.rs  wrashpty_integration.rs
sqlite/src/: convert.rs  error.rs  lib.rs  migration.rs  query.rs  schema.rs
sqlite/tests/: integration_tests.rs
