[workspace]
members = ["core", "discovery", "db", "sqlite", "cli", "examples"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
license = "MIT"

[workspace.dependencies]
command-schema-core = { path = "core" }
command-schema-db = { path = "db" }
command-schema-discovery = { path = "discovery" }
command-schema-sqlite = { path = "sqlite" }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
regex = "1.10"
wait-timeout = "0.2"
tracing = "0.1"
chrono = "0.4"
clap = "4.5"
rayon = "1.10"
serde_yaml = "0.9"
sha2 = "0.10"
flate2 = "1.0"
