[package]
name = "command-schema-cli"
description = "Command-line interface for schema extraction and database management"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository = "https://github.com/ex1tium/command-schema"
readme = "README.md"
keywords = ["cli", "schema", "extraction", "command-line", "tool"]
categories = ["command-line-utilities"]

[[bin]]
name = "schema-discover"
path = "src/main.rs"

[dependencies]
command-schema-core = { workspace = true }
command-schema-discovery = { workspace = true }
command-schema-db = { workspace = true }
command-schema-sqlite = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
rusqlite = { workspace = true }
rayon = { workspace = true }
chrono = { workspace = true }
