[package]
name = "command-schema-core"
description = "Core types and validation for CLI command schemas"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository = "https://github.com/ex1tium/command-schema"
readme = "README.md"
keywords = ["cli", "schema", "command-line", "types", "validation"]
categories = ["command-line-utilities", "parsing", "data-structures"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
