[package]
name = "command-schema-discovery"
description = "Discover and extract CLI command schemas from help output"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "schema-discover"
path = "src/main.rs"

[dependencies]
command-schema-core = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true }
rayon = { workspace = true }
serde_yaml = { workspace = true }
wait-timeout = { workspace = true }
