[package]
name = "command-schema-discovery"
description = "Discover and extract CLI command schemas from help output"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository = "https://github.com/ex1tium/command-schema"
readme = "README.md"
keywords = ["cli", "help", "parser", "extraction", "command-line"]
categories = ["command-line-utilities", "parsing"]

[features]
default = []
clap = ["dep:clap"]

[dependencies]
command-schema-core = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true }
rayon = { workspace = true }
serde_yaml = { workspace = true }
wait-timeout = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true, features = ["derive"], optional = true }
