[package]
name = "command-schema-examples"
description = "Runnable examples for the command-schema workspace"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository = "https://github.com/ex1tium/command-schema"
keywords = ["cli", "schema", "examples"]
categories = ["command-line-utilities"]
publish = false

[dependencies]
command-schema-core = { workspace = true }
command-schema-discovery = { workspace = true }
command-schema-db = { workspace = true }
command-schema-sqlite = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }

[features]
bundled-schemas = ["command-schema-db/bundled-schemas"]

[[example]]
name = "parse_help"
path = "parse_help.rs"

[[example]]
name = "load_static_db"
path = "load_static_db.rs"

[[example]]
name = "bundled_schemas"
path = "bundled_schemas.rs"

[[example]]
name = "sqlite_migration"
path = "sqlite_migration.rs"

[[example]]
name = "wrashpty_integration"
path = "wrashpty_integration.rs"
