[package]
name = "command-schema-sqlite"
description = "SQLite storage backend for command schemas with normalized tables and migration support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
command-schema-core = { workspace = true }
command-schema-db = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
